# ShortVideo-DevLifecycle

./: .gitignore  git.md  readme.md  乐拍视界.odt  趣乐音享.odt
2023051604042lanyinyin/: userCase.vpp  userCase_lyy.vpp  乐拍视界.odt  乐拍视界.vpp
LePai-Video/: implementationManual.md  readme.md
LePai-Video/client/: CMakeLists.txt
LePai-Video/client/android/: AndroidManifest.xml
LePai-Video/client/src/: ConfigManager.cpp  ConfigManager.h  images.qrc  main.cpp  networkclient.cpp  networkclient.h
LePai-Video/client/src/model/: AuthManager.cpp  AuthManager.h  browsevideosmodelview.cpp  browsevideosmodelview.h  fileutils.cpp  fileutils.h  usermodel.cpp  usermodel.h  videoaudiomerger.cpp  videoaudiomerger.h  videomodel.cpp  videomodel.h  videopublisher.cpp  videopublisher.h
LePai-Video/client/src/view/: AudioWaveform.qml  BottomBar.qml  CaptureUploadPage.qml  Content.qml  EditPage.qml  HomeFollowPage.qml  HomeTab.qml  HomeTopBar.qml  HomeVideoArea.qml  LoginPage.qml  Main.qml  MergeControlPanel.qml  Player.qml  PostVideoTab.qml  ProfileLikes.qml  ProfileTab.qml  ProfileWroks.qml  PublishPage.qml  RegisterPage.qml  VideoPlayWindow.qml  VideoWaveform.qml
LePai-Video/docs/: 客户端开发指南.md  客户端集成开发指南.md
LePai-Video/infrastructure/: deploy_system.sh  docker-compose.yml  docker.txt  install_client.sh  network_pc1.txt  startDocker.txt  uninstall_client.sh  uninstall_system.sh
LePai-Video/infrastructure/config_templates/: client_config.json  docker-compose.yml.template  nginx_cdn.conf.template  nginx_gateway.conf.template  server_config.json
LePai-Video/infrastructure/nginx_cdn/: nginx.conf
LePai-Video/infrastructure/nginx_gateway/: nginx.conf
LePai-Video/infrastructure/scripts/: cleanup_docker.sh  configure_env.sh  install_dependencies.sh  setup_docker.sh  setup_minio_buckets.sh  solve.txt
LePai-Video/infrastructure/sql/: 00_allow_repl.sh  init.sql
LePai-Video/infrastructure/systemd/: install_server.sh  lepai-api.service  lepai-worker.service
LePai-Video/server/: CMakeLists.txt
LePai-Video/server/api_service/: CMakeLists.txt
LePai-Video/server/api_service/src/: LikeController.cpp  LikeController.h  SyncScheduler.cpp  SyncScheduler.h  UserController.cpp  UserController.h  main.cpp
LePai-Video/server/api_service/src/application/service/: UserService.cpp  UserService.h
LePai-Video/server/api_service/src/controllers/: FeedController.cpp  FeedController.h  UserController.cpp  UserController.h  VideoController.cpp  VideoController.h
LePai-Video/server/api_service/src/domain/entity/: User.h
LePai-Video/server/api_service/src/entity/: User.h  Video.h
LePai-Video/server/api_service/src/filter/: LoginFilter.cpp  LoginFilter.h
LePai-Video/server/api_service/src/infrastructure/repository/: SessionRepository.cpp  SessionRepository.h  UserRepository.cpp  UserRepository.h
LePai-Video/server/api_service/src/repository/: SessionRepository.cpp  UserRepository.cpp  UserRepository.h  VideoRepository.cpp  VideoRepository.h
LePai-Video/server/api_service/src/scheduler/: SyncScheduler.cpp  SyncScheduler.h
LePai-Video/server/api_service/src/service/: RecommendationService.cpp  RecommendationService.h  UserService.cpp  UserService.h  VideoService.cpp  VideoService.h
LePai-Video/server/common/: CMakeLists.txt
LePai-Video/server/common/include/: MinioClient.h  config_manager.h  utils.h
LePai-Video/server/common/src/: MinioClient.cpp  config_manager.cpp  utils.cpp
LePai-Video/server/video_worker/: CMakeLists.txt
LePai-Video/server/video_worker/src/: main.cpp
LePai-Video/server/video_worker/src/media/: FFmpegHelper.cpp  FFmpegHelper.h
LePai-Video/server/video_worker/src/messaging/: TaskQueue.cpp  TaskQueue.h
LePai-Video/server/video_worker/src/repository/: VideoStatusRepository.cpp  VideoStatusRepository.h
LePai-Video/server/video_worker/src/service/: TranscodeService.cpp  TranscodeService.h
LePai-Video/server/video_worker/src/storage/: MinioClient.cpp  MinioClient.h
LiuJinLin/: liujinlin乐拍视界11.21.odt  liujinlin乐拍视界11.22odt  liujinlin乐拍视界12.13.odt  liujinlin乐拍视界12.14.odt  乐拍视界.odt
LiuJinLin/vp/: 乐拍视界.vpp
ZhuCanyin/: 乐拍视界.odt  乐拍视界.vpp
ZhuCanyin/用例图/: 乐拍视界.vpp
baixiang/: 乐拍视界.odt  乐拍视界.vpp
douyin/: BottomBar.qml  CMakeLists.txt  CaptureUploadPage.qml  Content.qml  EditPage.qml  FriendTopBar.qml  FriendVideoArea.qml  FriendsTab.qml  HomeFollowPage.qml  HomeTopBar.qml  HomeVideoArea.qml  LoginPage.qml  Main.qml  Player.qml  PostVideoTab.qml  ProfileTab.qml  PublishPage.qml  icons.qrc  main.cpp  musicmodel.cpp  musicmodel.h  musicviewmodel.cpp  musicviewmodel.h  vam.qrc
douyin/android/: AndroidManifest.xml
vp/: 乐拍视界.vpp
zhoujun/: 乐拍视界 11 22.odt  乐拍视界 12 4.odt  乐拍视界.odt
zhoujun/图/: 乐拍视界.vpp
zhoujun/用况图/: 乐拍视界.vpp
zhoujun/类图/: 乐拍视界.vpp
展示/: leiPai.pptx
